added routes of all microservices

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,11 @@ spring:
           uri: lb://BOOK-SERVICE
           predicates:
             - Path=/book-service/**
+        - id: order-management
+          uri: lb://ORDER-MANAGEMENT
+          predicates:
+            - Path=/order-management/**
+        - id: user-management 
+          uri: lb://USER-MANAGEMENT
+          predicates:
+           - Path=/user-management/**
