--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.banner.location=classpath:banner.txt
 server.port=9191
 spring.application.name=gateway
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
